Split the docker compose into dev and prod, fixed more issues with the deployment and more frontend improvements
Frontend: More cosmetic fixes and improvements - markdown looks better now

--- a/docker-compose.development.yaml
+++ b/docker-compose.development.yaml
@@ -2,7 +2,7 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - "${FRONTEND_PORT}:${FRONTEND_PORT_DOCKER}"
     depends_on:
@@ -13,15 +13,19 @@ services:
       volume-init:
         condition: service_completed_successfully
     volumes:
+      - ./frontend:/app:delegated
+      - /app/node_modules
+      - /app/dist
       - ./.env:/app/.env:ro
     environment:
-      NODE_ENV: ${NODE_ENV:-production}
-      CI: "true"
+      NODE_ENV: ${NODE_ENV:-development}
+      CHOKIDAR_USEPOLLING: "true"
+      WATCHPACK_POLLING: "true"
 
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - "${BACKEND_PORT}:${BACKEND_PORT_DOCKER}"
     depends_on:
@@ -30,11 +34,14 @@ services:
       volume-init:
         condition: service_completed_successfully
     volumes:
+      - ./backend:/app
+      - /app/node_modules
+      - /app/dist
       - ./.env:/app/.env
       - logs:/app/logs
       - shared-uploads:/app/shared-uploads
     environment:
-      NODE_ENV: ${NODE_ENV:-production}
+      NODE_ENV: ${NODE_ENV:-development}
     extra_hosts:
       - "host.docker.internal:host-gateway"
     healthcheck:
