Added a new task, improved short list and list item view, as well as cleaning the table view a bit

--- a/docker-compose.development.yaml
+++ b/docker-compose.development.yaml
@@ -22,6 +22,7 @@ services:
       NODE_ENV: ${NODE_ENV:-development}
       CHOKIDAR_USEPOLLING: "true"
       WATCHPACK_POLLING: "true"
+      PORT: ${FRONTEND_PORT_DOCKER:-4000}
 
   backend:
     build:
