--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -24,5 +24,6 @@ ENV NODE_ENV=development
 # RUN chown -R 1000:1000 /app/node_modules
 # USER node
 
+EXPOSE ${FRONTEND_PORT_DOCKER}
 # Start the development server
 CMD ["npm", "start"]
