--- a/template.env
+++ b/template.env
@@ -11,6 +11,7 @@ GROQ_API_KEY=
 
 GOOGLE_CSE_ID=
 GOOGLE_API_KEY=
+GOOGLE_KNOWLEDGE_GRAPH_API_KEY=
 REDDIT_CLIENT_ID=
 REDDIT_CLIENT_SECRET=
 EXA_API_KEY=
