--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,7 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile.dev
-    env_file:
-      - .env
+      dockerfile: Dockerfile
     ports:
       - "${FRONTEND_PORT}:${FRONTEND_PORT_DOCKER}"
     depends_on:
@@ -15,19 +13,16 @@ services:
       volume-init:
         condition: service_completed_successfully
     volumes:
-      - ./frontend:/app:delegated
-      - /app/node_modules
-      - /app/dist
+      - ./.env:/app/.env:ro
     environment:
-      NODE_ENV: ${NODE_ENV:-development}
-      CHOKIDAR_USEPOLLING: "true"
-      WATCHPACK_POLLING: "true"
+      NODE_ENV: ${NODE_ENV:-production}
       PORT: ${FRONTEND_PORT_DOCKER:-4000}
+      CI: "true"
 
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
       - "${BACKEND_PORT}:${BACKEND_PORT_DOCKER}"
     depends_on:
@@ -36,14 +31,11 @@ services:
       volume-init:
         condition: service_completed_successfully
     volumes:
-      - ./backend:/app
-      - /app/node_modules
-      - /app/dist
       - ./.env:/app/.env
       - logs:/app/logs
       - shared-uploads:/app/shared-uploads
     environment:
-      NODE_ENV: ${NODE_ENV:-development}
+      NODE_ENV: ${NODE_ENV:-production}
     extra_hosts:
       - "host.docker.internal:host-gateway"
     healthcheck:
