--- a/template.env
+++ b/template.env
@@ -4,7 +4,7 @@
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
 COHERE_API_KEY=
-META_API_KEY=
+LLAMA_API_KEY=
 GEMINI_API_KEY=
 MISTRAL_API_KEY=
 GROQ_API_KEY=
