--- a/template.env
+++ b/template.env
@@ -15,6 +15,7 @@ GOOGLE_KNOWLEDGE_GRAPH_API_KEY=
 REDDIT_CLIENT_ID=
 REDDIT_CLIENT_SECRET=
 EXA_API_KEY=
+WOLFRAM_ALPHA_API_KEY=
 
 ## System configuration
 # --- No need to update the variables below ---
