Finishing implementation of node-based task execution, of the new refactored prompt agent task logic, and its childs, and a few other things like retrieval tasks, wolfram alpha api, etc.

--- a/template.env
+++ b/template.env
@@ -15,7 +15,7 @@ GOOGLE_KNOWLEDGE_GRAPH_API_KEY=
 REDDIT_CLIENT_ID=
 REDDIT_CLIENT_SECRET=
 EXA_API_KEY=
-WOLFRAM_ALPHA_API_KEY=
+WOLFRAM_ALPHA_APP_ID=
 
 ## System configuration
 # --- No need to update the variables below ---
