Embeddings and user interactions are finally functional. Implemented the <analysis> and <aliceDocuments> blocks to allow agents to structure their outputs better. A lot of minor issues that need to be addressed still

--- a/template.env
+++ b/template.env
@@ -20,6 +20,9 @@ WOLFRAM_ALPHA_APP_ID=
 ## System configuration
 # --- No need to update the variables below ---
 
+# For token estimation
+CharToToken=3.2
+
 # Database Configuration
 MONGODB_URI=mongodb://mongo/alice_database
 
@@ -51,5 +54,8 @@ LM_STUDIO_DEFAULT_PRESET=OpenChat
 # ENV MODE
 NODE_ENV=production
 
+# Dir for files
 SHARED_UPLOAD_DIR=/app/shared-uploads
+
+# Just in case
 COMPOSE_PROJECT_DIR=.
