--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "reactflow": "^11.11.4",
     "rehype-raw": "^7.0.0",
+    "remark-custom-blocks": "^2.6.1",
     "remark-gfm": "3.0.1",
     "serve": "^14.2.3",
     "simplex-noise": "^4.0.2",
