--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,7 +20,7 @@
   "include": [
     "src/**/*.ts", 
     "src/**/*.tsx",
-    "src/types/**/*.ts", "../tmp/Message.tsx",
+    "src/types/**/*.ts", 
     ],
   "exclude": ["node_modules", "build"]
 }
