Workflow: A bit of refactoring and cleaning up API Engines, tested and fixed Bark and Pixart for local generations (only without cuda for now), implemented data clusters to chats and retrieval tasks can now be specified where the chat's data cluster will be shared. Implemented data clusters across the board, and added a few components to the frontend to display and manage them. Embeddings are already working, need to test the Retrieval task, and pretty much done for this sprint

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-logs
-tmp
+logs/
+tmp/
 .venv
 venv
 .pytest_cache
@@ -8,6 +8,7 @@ venv
 .vscode
 myDockerCompose.log
 __pycache__
-shared-uploads
-shared-types
-agent_computer_use
+shared-uploads/
+shared-types/
+agent_computer_use/
+model_cache/
