--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -3,6 +3,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    env_file:
+      - .env
     ports:
       - "${FRONTEND_PORT}:${FRONTEND_PORT_DOCKER}"
     depends_on:
@@ -12,8 +14,6 @@ services:
         condition: service_healthy
       volume-init:
         condition: service_completed_successfully
-    volumes:
-      - ./.env:/app/.env:ro
     environment:
       NODE_ENV: ${NODE_ENV:-production}
       PORT: ${FRONTEND_PORT_DOCKER:-4000}
