--- a/template.env
+++ b/template.env
@@ -17,6 +17,9 @@ REDDIT_CLIENT_SECRET=
 EXA_API_KEY=
 WOLFRAM_ALPHA_APP_ID=
 
+# Add if using private models
+HUGGINGFACE_TOKEN=
+
 ## System configuration
 # --- No need to update the variables below ---
 
