--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "dagre": "^0.8.5",
     "framer-motion": "^11.3.2",
+    "lodash.debounce": "^4.0.8",
     "next": ">=14.2.10",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
@@ -42,17 +43,18 @@
     "tailwind-merge": "^2.4.0",
     "typescript": "^5.5.4",
     "web-vitals": "^2.1.4",
+    "react-copy-to-clipboard": "^5.1.0",
     "winston": "^3.13.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@types/debug": "^4.1.12",
+    "@types/lodash": "^4.17.13",
     "@types/mdast": "^4.0.4",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.19",
     "postcss": ">=8.4.6",
-    "react-copy-to-clipboard": "^5.1.0",
     "tailwindcss": "^3.4.4"
   },
   "scripts": {
