--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/dagre": "^0.7.52",
     "@types/jest": "^29.5.12",
+    "@types/nunjucks": "^3.2.6",
     "@types/react": "^18.3.3",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.0",
@@ -26,9 +27,11 @@
     "framer-motion": "^11.3.2",
     "lodash.debounce": "^4.0.8",
     "next": ">=14.2.10",
+    "nunjucks": "^3.2.4",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.23.1",
@@ -43,7 +46,6 @@
     "tailwind-merge": "^2.4.0",
     "typescript": "^5.5.4",
     "web-vitals": "^2.1.4",
-    "react-copy-to-clipboard": "^5.1.0",
     "winston": "^3.13.1"
   },
   "devDependencies": {
