--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     env_file:
       - .env
     ports:
@@ -14,15 +14,20 @@ services:
         condition: service_healthy
       volume-init:
         condition: service_completed_successfully
+    volumes:
+      - ./frontend:/app:consistent
+      - /app/node_modules
+      - /app/dist
     environment:
-      NODE_ENV: ${NODE_ENV:-production}
+      NODE_ENV: ${NODE_ENV:-development}
+      CHOKIDAR_USEPOLLING: "true"
+      WATCHPACK_POLLING: "true"
       PORT: ${FRONTEND_PORT_DOCKER:-4000}
-      CI: "true"
 
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - "${BACKEND_PORT}:${BACKEND_PORT_DOCKER}"
     depends_on:
@@ -31,11 +36,14 @@ services:
       volume-init:
         condition: service_completed_successfully
     volumes:
+      - ./backend:/app
+      - /app/node_modules
+      - /app/dist
       - ./.env:/app/.env
       - logs:/app/logs
       - shared-uploads:/app/shared-uploads
     environment:
-      NODE_ENV: ${NODE_ENV:-production}
+      NODE_ENV: ${NODE_ENV:-development}
     extra_hosts:
       - "host.docker.internal:host-gateway"
     healthcheck:
@@ -77,28 +85,28 @@ services:
       start_period: 5s
 
   volume-init:
-    image: busybox
-    attach: false
-    volumes:
-      - ${COMPOSE_PROJECT_DIR}/logs:/logs
-      - ${COMPOSE_PROJECT_DIR}/shared-uploads:/shared-uploads
-      - ${COMPOSE_PROJECT_DIR}/model_cache:/model_cache 
-    command: |
-      sh -c "
-        echo 'Starting volume initialization' &&
-        ls -la / &&
-        echo 'Creating directories' &&
-        mkdir -p /logs /shared-uploads /model_cache &&
-        echo 'Setting permissions' &&
-        chmod -R 755 /logs &&
-        chown -R 1000:1000 /logs &&
-        chmod -R 755 /shared-uploads &&
-        chown -R 1000:1000 /shared-uploads &&
-        chmod -R 755 /model_cache &&
-        chown -R 1000:1000 /model_cache &&
-        echo 'Finished volume initialization' &&
-        ls -la /logs /shared-uploads /model_cache
-      "
+      image: busybox
+      attach: false
+      volumes:
+        - ${COMPOSE_PROJECT_DIR}/logs:/logs
+        - ${COMPOSE_PROJECT_DIR}/shared-uploads:/shared-uploads
+        - ${COMPOSE_PROJECT_DIR}/model_cache:/model_cache
+      command: |
+        sh -c "
+          echo 'Starting volume initialization' &&
+          ls -la / &&
+          echo 'Creating directories' &&
+          mkdir -p /logs /shared-uploads /model_cache &&
+          echo 'Setting permissions' &&
+          chmod -R 755 /logs &&
+          chown -R 1000:1000 /logs &&
+          chmod -R 755 /shared-uploads &&
+          chown -R 1000:1000 /shared-uploads &&
+          chmod -R 755 /model_cache &&
+          chown -R 1000:1000 /model_cache &&
+          echo 'Finished volume initialization' &&
+          ls -la /logs /shared-uploads /model_cache
+        "
 
   mongo:
     image: mongo:latest
