Backend: Added a bit of logic to the lm studio manager, allowing it to handle embedding requests. Frontend: Almost lost my mind trying to get the shared folder to work properly in prod. Workflow: Fixes to init values mostly

--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -45,6 +45,16 @@ services:
       retries: 5
       start_period: 10s
 
+  redis:
+    image: redis:6.0-alpine
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   workflow:
     build:
       context: ./workflow
@@ -64,9 +74,12 @@ services:
         condition: service_completed_successfully
       bash_image:
         condition: service_completed_successfully
+      redis:
+        condition: service_healthy
     environment:
       - PYTHONPATH=/app
       - HOST=host.docker.internal
+      - REDIS_URL=redis://redis:6379/0
     extra_hosts:
       - "host.docker.internal:host-gateway"
     healthcheck:
@@ -90,14 +103,10 @@ services:
         echo 'Creating directories' &&
         mkdir -p /logs /shared-uploads /model_cache &&
         echo 'Setting permissions' &&
-        chmod -R 755 /logs &&
-        chown -R 1000:1000 /logs &&
-        chmod -R 755 /shared-uploads &&
-        chown -R 1000:1000 /shared-uploads &&
-        chmod -R 755 /model_cache &&
-        chown -R 1000:1000 /model_cache &&
+        chmod -R 755 /logs /shared-uploads /model_cache &&
+        chown -R 1000:1000 /logs /shared-uploads /model_cache &&
         echo 'Finished volume initialization' &&
-        ls -la /logs /shared-uploads /model_cache
+        ls -la /logs /shared-uploads /model_cache 
       "
 
   mongo:
@@ -111,14 +120,14 @@ services:
   python_image:
     build:
       context: .
-      dockerfile: Dockerfile.python
+      dockerfile: workflow/Dockerfile.python
     image: mypython:latest
     command: ["bash"]
 
   bash_image:
     build:
       context: .
-      dockerfile: Dockerfile.bash
+      dockerfile: workflow/Dockerfile.bash
     image: mybash:latest
     command: ["bash"]
 
