--- a/docker-compose.development.yaml
+++ b/docker-compose.development.yaml
@@ -18,7 +18,6 @@ services:
       - ./frontend:/app:consistent
       - /app/node_modules
       - /app/dist
-      - shared:/app/public/shared
     environment:
       NODE_ENV: ${NODE_ENV:-development}
       CHOKIDAR_USEPOLLING: "true"
@@ -73,9 +72,12 @@ services:
         condition: service_completed_successfully
       bash_image:
         condition: service_completed_successfully
+      redis:
+        condition: service_healthy
     environment:
       - PYTHONPATH=/app
       - HOST=host.docker.internal
+      - REDIS_URL=redis://redis:6379/0
     extra_hosts:
       - "host.docker.internal:host-gateway"
     healthcheck:
@@ -85,6 +87,16 @@ services:
       retries: 5
       start_period: 5s
 
+  redis:
+    image: redis:6.0-alpine
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   volume-init:
       image: busybox
       attach: false
@@ -92,18 +104,17 @@ services:
         - ${COMPOSE_PROJECT_DIR}/logs:/logs
         - ${COMPOSE_PROJECT_DIR}/shared-uploads:/shared-uploads
         - ${COMPOSE_PROJECT_DIR}/model_cache:/model_cache
-        - ${COMPOSE_PROJECT_DIR}/shared:/shared 
       command: |
         sh -c "
           echo 'Starting volume initialization' &&
           ls -la / &&
           echo 'Creating directories' &&
-          mkdir -p /logs /shared-uploads /model_cache /shared &&
+          mkdir -p /logs /shared-uploads /model_cache &&
           echo 'Setting permissions' &&
-          chmod -R 755 /logs /shared-uploads /model_cache /shared &&
-          chown -R 1000:1000 /logs /shared-uploads /model_cache /shared &&
+          chmod -R 755 /logs /shared-uploads /model_cache &&
+          chown -R 1000:1000 /logs /shared-uploads /model_cache &&
           echo 'Finished volume initialization' &&
-          ls -la /logs /shared-uploads /model_cache /shared
+          ls -la /logs /shared-uploads /model_cache
         "
 
   mongo:
@@ -141,12 +152,6 @@ volumes:
       type: none
       o: bind
       device: ${COMPOSE_PROJECT_DIR}/shared-uploads
-  shared:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ${COMPOSE_PROJECT_DIR}/shared
   mongo_data:
   model_cache:
     driver: local
