--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     env_file:
       - .env
     ports:
@@ -14,21 +14,15 @@ services:
         condition: service_healthy
       volume-init:
         condition: service_completed_successfully
-    volumes:
-      - ./frontend:/app:consistent
-      - /app/node_modules
-      - /app/dist
-      - shared:/app/public/shared
     environment:
-      NODE_ENV: ${NODE_ENV:-development}
-      CHOKIDAR_USEPOLLING: "true"
-      WATCHPACK_POLLING: "true"
+      NODE_ENV: ${NODE_ENV:-production}
       PORT: ${FRONTEND_PORT_DOCKER:-4000}
+      CI: "true"
 
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
       - "${BACKEND_PORT}:${BACKEND_PORT_DOCKER}"
     depends_on:
@@ -37,14 +31,11 @@ services:
       volume-init:
         condition: service_completed_successfully
     volumes:
-      - ./backend:/app
-      - /app/node_modules
-      - /app/dist
       - ./.env:/app/.env
       - logs:/app/logs
       - shared-uploads:/app/shared-uploads
     environment:
-      NODE_ENV: ${NODE_ENV:-development}
+      NODE_ENV: ${NODE_ENV:-production}
     extra_hosts:
       - "host.docker.internal:host-gateway"
     healthcheck:
@@ -99,25 +90,24 @@ services:
       start_period: 5s
 
   volume-init:
-      image: busybox
-      attach: false
-      volumes:
-        - ${COMPOSE_PROJECT_DIR}/logs:/logs
-        - ${COMPOSE_PROJECT_DIR}/shared-uploads:/shared-uploads
-        - ${COMPOSE_PROJECT_DIR}/model_cache:/model_cache
-        - ${COMPOSE_PROJECT_DIR}/shared:/shared 
-      command: |
-        sh -c "
-          echo 'Starting volume initialization' &&
-          ls -la / &&
-          echo 'Creating directories' &&
-          mkdir -p /logs /shared-uploads /model_cache /shared &&
-          echo 'Setting permissions' &&
-          chmod -R 755 /logs /shared-uploads /model_cache /shared &&
-          chown -R 1000:1000 /logs /shared-uploads /model_cache /shared &&
-          echo 'Finished volume initialization' &&
-          ls -la /logs /shared-uploads /model_cache /shared
-        "
+    image: busybox
+    attach: false
+    volumes:
+      - ${COMPOSE_PROJECT_DIR}/logs:/logs
+      - ${COMPOSE_PROJECT_DIR}/shared-uploads:/shared-uploads
+      - ${COMPOSE_PROJECT_DIR}/model_cache:/model_cache 
+    command: |
+      sh -c "
+        echo 'Starting volume initialization' &&
+        ls -la / &&
+        echo 'Creating directories' &&
+        mkdir -p /logs /shared-uploads /model_cache &&
+        echo 'Setting permissions' &&
+        chmod -R 755 /logs /shared-uploads /model_cache &&
+        chown -R 1000:1000 /logs /shared-uploads /model_cache &&
+        echo 'Finished volume initialization' &&
+        ls -la /logs /shared-uploads /model_cache 
+      "
 
   mongo:
     image: mongo:latest
@@ -154,12 +144,6 @@ volumes:
       type: none
       o: bind
       device: ${COMPOSE_PROJECT_DIR}/shared-uploads
-  shared:
-    driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ${COMPOSE_PROJECT_DIR}/shared
   mongo_data:
   model_cache:
     driver: local
