--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official Node.js image as a base image
-FROM node:16 AS build
+FROM node:18-alpine AS build
 # Set the working directory
 WORKDIR /app
 # Copy package.json and package-lock.json
