Frontend: Optimized -> messages not auto populated. Consolidated the forms a bit more. Backend: Updated chats to not populate messages, and added endpoint to get a chat populated. Workflow: Chat logic updated as well. A lot of fixes and bugs found. Gemini is functional, but you need api access to the model

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@express-rate-limit/tsconfig": "^1.0.2",
     "@lmstudio/sdk": "^0.4.2",
     "axios": ">=1.7.4",
     "bcryptjs": "^2.4.3",
