--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-markdown": "^8.0.7",
+    "react-pdf": "^9.1.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
