Completed refactoring of the Agent task. Improved the code execution logic to handle ts/js (splicing and reducing imports), handling timeout, streaming logs, etc. Fixed some tasks using old input updating logic and implemented the new version. Adjusted prompts for the coding agents

--- a/docker-compose.development.yaml
+++ b/docker-compose.development.yaml
@@ -137,6 +137,13 @@ services:
     image: mybash:latest
     command: ["bash"]
 
+  javascript_image:
+    build:
+      context: .
+      dockerfile: workflow/Dockerfile.javascript
+    image: myjs:latest
+    command: ["bash"]
+
 volumes:
   logs:
     driver: local
