--- a/template.env
+++ b/template.env
@@ -1,14 +1,13 @@
 # Project Alice Environment Configuration
-
-# API Keys (replace with your actual keys or use placeholders)
+# MODEL API Keys (replace with your actual keys or use placeholders)
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
 COHERE_API_KEY=
 LLAMA_API_KEY=
 GEMINI_API_KEY=
 MISTRAL_API_KEY=
+# OTHER
 GROQ_API_KEY=
-
 GOOGLE_CSE_ID=
 GOOGLE_API_KEY=
 GOOGLE_KNOWLEDGE_GRAPH_API_KEY=
@@ -16,46 +15,31 @@ REDDIT_CLIENT_ID=
 REDDIT_CLIENT_SECRET=
 EXA_API_KEY=
 WOLFRAM_ALPHA_APP_ID=
-
 # Add if using private models
 HUGGINGFACE_TOKEN=
-
-## System configuration
+System configuration
 # --- No need to update the variables below ---
-
-# For token estimation
-CharToToken=3.2
-
+REACT_APP_CHAR_TO_TOKEN=3.2
 # Database Configuration
 MONGODB_URI=mongodb://mongo/alice_database
-
 # Port Configuration
-FRONTEND_PORT=3001
-FRONTEND_PORT_DOCKER=4000
-BACKEND_PORT=3003
+FRONTEND_PORT=4000
+FRONTEND_PORT_DOCKER=3000
+REACT_APP_BACKEND_PORT=3000
 BACKEND_PORT_DOCKER=3000
-WORKFLOW_PORT=3002
+REACT_APP_WORKFLOW_PORT=8000
 WORKFLOW_PORT_DOCKER=8000
-
 # Host Configuration
-HOST=localhost
+REACT_APP_HOST=localhost
 FRONTEND_HOST=frontend
 BACKEND_HOST=backend
 WORKFLOW_HOST=workflow
-
 # Security
 JWT_SECRET=your_very_long_and_secure_random_string_here
-
 # Logging Configuration
-LOG_LEVEL=INFO
 REACT_APP_LOG_LEVEL=INFO
 LOGGING_FOLDER=logs
-
 # ENV MODE
-NODE_ENV=production
-
-# Dir for files
+NODE_ENV=development
 SHARED_UPLOAD_DIR=/app/shared-uploads
-
-# Just in case
 COMPOSE_PROJECT_DIR=.
