Moved most container's images to a registry so they don't need to be built locally. Frontend is still problematic

--- a/template.env
+++ b/template.env
@@ -19,6 +19,9 @@ WOLFRAM_ALPHA_APP_ID=
 HUGGINGFACE_TOKEN=
 System configuration
 # --- No need to update the variables below ---
+# DOCKER REGISTRY
+REGISTRY_PATH=us-central1-docker.pkg.dev/alice-assistant-417621/project-alice-repo
+VERSION=v0.3.3
 REACT_APP_CHAR_TO_TOKEN=3.2
 # Database Configuration
 MONGODB_URI=mongodb://mongo/alice_database
