--- a/template.env
+++ b/template.env
@@ -33,7 +33,7 @@ BACKEND_PORT_DOCKER=3000
 REACT_APP_WORKFLOW_PORT=8000
 WORKFLOW_PORT_DOCKER=8000
 # Host Configuration
-REACT_APP_HOST=localhost
+REACT_APP_HOST=localhost # If you want to change this, you'll need to re-build the frontend image
 FRONTEND_HOST=frontend
 BACKEND_HOST=backend
 WORKFLOW_HOST=workflow
