--- a/template.env
+++ b/template.env
@@ -21,16 +21,16 @@ System configuration
 # --- No need to update the variables below ---
 # DOCKER REGISTRY
 REGISTRY_PATH=us-central1-docker.pkg.dev/alice-assistant-417621/project-alice-repo
-VERSION=v0.3.3
-REACT_APP_CHAR_TO_TOKEN=3.2
+VERSION=v0.3.4
+REACT_APP_CHAR_TO_TOKEN=3.2 # If you want to change this, you'll need to re-build the frontend image
 # Database Configuration
 MONGODB_URI=mongodb://mongo/alice_database
 # Port Configuration
 FRONTEND_PORT=4000
 FRONTEND_PORT_DOCKER=3000
-REACT_APP_BACKEND_PORT=3000
+REACT_APP_BACKEND_PORT=3000 # If you want to change this, you'll need to re-build the frontend image
 BACKEND_PORT_DOCKER=3000
-REACT_APP_WORKFLOW_PORT=8000
+REACT_APP_WORKFLOW_PORT=8000 # If you want to change this, you'll need to re-build the frontend image
 WORKFLOW_PORT_DOCKER=8000
 # Host Configuration
 REACT_APP_HOST=localhost # If you want to change this, you'll need to re-build the frontend image
@@ -40,9 +40,9 @@ WORKFLOW_HOST=workflow
 # Security
 JWT_SECRET=your_very_long_and_secure_random_string_here
 # Logging Configuration
-REACT_APP_LOG_LEVEL=INFO
+REACT_APP_LOG_LEVEL=INFO # If you want to change this, you'll need to re-build the frontend image
 LOGGING_FOLDER=logs
 # ENV MODE
-NODE_ENV=development
+NODE_ENV=production
 SHARED_UPLOAD_DIR=/app/shared-uploads
 COMPOSE_PROJECT_DIR=.
