--- a/template.env
+++ b/template.env
@@ -22,25 +22,26 @@ System configuration
 # DOCKER REGISTRY
 REGISTRY_PATH=us-central1-docker.pkg.dev/alice-assistant-417621/project-alice-repo
 VERSION=v0.3.4
-REACT_APP_CHAR_TO_TOKEN=3.2 # If you want to change this, you'll need to re-build the frontend image
+# If you want to change any REACT_APP variable, you'll need to re-build the frontend image
+REACT_APP_CHAR_TO_TOKEN=3.2 
 # Database Configuration
 MONGODB_URI=mongodb://mongo/alice_database
 # Port Configuration
 FRONTEND_PORT=4000
 FRONTEND_PORT_DOCKER=3000
-REACT_APP_BACKEND_PORT=3000 # If you want to change this, you'll need to re-build the frontend image
+REACT_APP_BACKEND_PORT=3000
 BACKEND_PORT_DOCKER=3000
-REACT_APP_WORKFLOW_PORT=8000 # If you want to change this, you'll need to re-build the frontend image
+REACT_APP_WORKFLOW_PORT=8000
 WORKFLOW_PORT_DOCKER=8000
 # Host Configuration
-REACT_APP_HOST=localhost # If you want to change this, you'll need to re-build the frontend image
+REACT_APP_HOST=localhost
 FRONTEND_HOST=frontend
 BACKEND_HOST=backend
 WORKFLOW_HOST=workflow
 # Security
 JWT_SECRET=your_very_long_and_secure_random_string_here
 # Logging Configuration
-REACT_APP_LOG_LEVEL=INFO # If you want to change this, you'll need to re-build the frontend image
+REACT_APP_LOG_LEVEL=INFO
 LOGGING_FOLDER=logs
 # ENV MODE
 NODE_ENV=production
