Frontend is now responsive. Moved the local logic to a side to make it easier to remove. Fixed some more issues

--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -17,7 +17,7 @@ RUN npm ci --legacy-peer-deps
 ENV PATH /app/node_modules/.bin:$PATH
 
 # Copy the rest of the application code
-COPY . .
+COPY frontend/ .
 
 # Set the environment variable for development mode
 ENV NODE_ENV=development
