--- a/template.env
+++ b/template.env
@@ -17,7 +17,7 @@ EXA_API_KEY=
 WOLFRAM_ALPHA_APP_ID=
 # Add if using private models
 HUGGINGFACE_TOKEN=
-System configuration
+## System configuration
 # --- No need to update the variables below ---
 # DOCKER REGISTRY
 REGISTRY_PATH=us-central1-docker.pkg.dev/alice-assistant-417621/project-alice-repo
@@ -30,20 +30,21 @@ MONGODB_URI=mongodb://mongo/alice_database
 FRONTEND_PORT=4000
 FRONTEND_PORT_DOCKER=3000
 REACT_APP_BACKEND_PORT=3000
-BACKEND_PORT_DOCKER=3000
 REACT_APP_WORKFLOW_PORT=8000
+BACKEND_PORT_DOCKER=3000
 WORKFLOW_PORT_DOCKER=8000
 # Host Configuration
 REACT_APP_HOST=localhost
 FRONTEND_HOST=frontend
-BACKEND_HOST=backend
-WORKFLOW_HOST=workflow
-# Security
-JWT_SECRET=your_very_long_and_secure_random_string_here
+REACT_APP_BACKEND_HOST=backend
+REACT_APP_WORKFLOW_HOST=workflow
 # Logging Configuration
 REACT_APP_LOG_LEVEL=INFO
+# Security
+JWT_SECRET=your_very_long_and_secure_random_string_here
 LOGGING_FOLDER=logs
 # ENV MODE
 NODE_ENV=production
+# OTHER
 SHARED_UPLOAD_DIR=/app/shared-uploads
 COMPOSE_PROJECT_DIR=.
