--- a/docker-compose.development.yaml
+++ b/docker-compose.development.yaml
@@ -2,9 +2,7 @@ services:
   frontend:
     build:
       context: .
-      dockerfile: frontend/Dockerfile
-    env_file:
-      - .env
+      dockerfile: frontend/Dockerfile.dev
     ports:
       - "${FRONTEND_PORT}:${FRONTEND_PORT_DOCKER}"
     depends_on:
@@ -20,7 +18,7 @@ services:
       NODE_ENV: ${NODE_ENV:-development}
       CHOKIDAR_USEPOLLING: "true"
       WATCHPACK_POLLING: "true"
-      PORT: ${FRONTEND_PORT_DOCKER:-4000}
+      PORT: ${FRONTEND_PORT_DOCKER:-3000}
 
   backend:
     build:
@@ -46,7 +44,7 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://${BACKEND_HOST:-backend}:${BACKEND_PORT_DOCKER}/api/health"]
+      test: ["CMD", "curl", "-f", "http://${REACT_APP_BACKEND_HOST:-backend}:${BACKEND_PORT_DOCKER}/api/health"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -55,6 +53,7 @@ services:
   workflow:
     build:
       context: ./workflow
+      dockerfile: Dockerfile
     env_file:
       - .env
     ports:
@@ -79,7 +78,7 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://${WORKFLOW_HOST:-workflow}:${WORKFLOW_PORT_DOCKER}/health"]
+      test: ["CMD", "curl", "-f", "http://${REACT_APP_WORKFLOW_HOST:-workflow}:${WORKFLOW_PORT_DOCKER}/health"]
       interval: 30s
       timeout: 10s
       retries: 5
